# structured-outputs-benchmark

./: .gitignore  README.md  data_prep.ipynb  pyproject.toml  run_benchmarks.sh  script.sh  service_list.txt  setup_pod.sh
data/clean/1-rotowire/: bench.json  prompt_low.txt  schema.json
data/clean/2-wiki_bio/: bench.json  prompt.txt  prompt_low.txt
data/clean/3-few_nerd/: bench.json  prompt.txt  prompt_low.txt  schema.json
data/clean/4-TOPv1/: bench.json  clean.json  ontology.json  ontology_prompt.json  parsed.json  prompt.txt  prompt_low.txt  schema.json
data/clean/5-api_bank/: bench.json  clean.json  parsed.json  prompt.txt  prompt_low.txt
data/clean/6-reasoning/: bench_GSM8K.json  clean_GSM8K.json  prompt_last_letter.txt  schema_GSM8K.json
data/clean/TOPv1/: schema_base.json
data/clean/rotowire/: prompt.txt
data/sources/TOP/: test.json
data/sources/api_bank/: level-1-2.json
data/sources/say-what-you-mean/: GSM8K_JSON.ipynb  JSON_section.ipynb  Shuffle_Objects.ipynb  shuffle_objects.json
data/sources/struc_bench/: table_alpaca_output.txt  table_azurefilter_output.txt  table_test_output.txt  test.data
notebooks/: bench_basis.ipynb  bench_results.ipynb  evaluate.ipynb  scratch.ipynb
results/: bench_results copy.json  bench_results.json  bench_results_old.json  bench_results_save.json  bench_results_time.json
results/Qwen3-1.7B/1-rotowire/: generated.json
results/Qwen3-1.7B/2-wiki_bio/: generated.json
results/Qwen3-1.7B/3-few_nerd/: generated.json
results/Qwen3-1.7B/4-TOPv1/: generated.json
results/Qwen3-1.7B/5-api_bank/: generated.json
results/gemini-2.5-flash-preview-05-20/2-wiki_bio/: generated.json
results/gemini-2.5-flash-preview-05-20/4-TOPv1/: generated.json
results/gemini-2.5-flash-preview-05-20/5-api_bank/: generated.json
results/gemini-2.5-flash-preview-05-20_jsonmode/4-TOPv1/: generated.json
src/: check_prompt_lengths.py  evaluate.py  generate.py  generate_gemma.py  generate_guidance.py  generate_transformers.py  generate_transformers_guidance.py  generate_transformers_outlines.py  generate_transformers_reasoning_free.py  generate_vllm.py  generate_vllm_outlines.py
(+213 files in other folders)
