[project]
name = "structured-outputs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "json-repair>=0.46.0",
    "jsonschema>=4.23.0",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.3",
    "mistralai>=1.7.0",
    "outlines>=0.2.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "rapidfuzz>=3.13.0",
    "transformers>=4.52.3",
]
