[project]
name = "structured-outputs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "dotenv>=0.9.9",
    "google-genai>=1.19.0",
    "guidance>=0.2.2",
    "huggingface-hub>=0.33.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "json-repair>=0.46.0",
    "jsonschema>=4.23.0",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.3",
    "mistralai>=1.7.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "regex>=2024.11.6",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "unidecode>=1.4.0",
    "vllm>=0.9.1",
]
